@@ -3788,10 +3788,6 @@ static int	function_parse_unquoted_param(const char *expr, size_t *length, size_
 		}
 	}
 out:
-	/* trim the trailing whitespace */
-	while (ptr > expr && ' ' == *(ptr - 1))
-		ptr--;
-
 	*length = ptr - expr;
 
 	return SUCCEED;
@@ -3807,7 +3803,7 @@ out:
  *                             parameter separator: (p1,p2 ... or ,p2,p3 ...  *
  *             param_pos - [OUT] the parameter position, excluding leading    *
  *                               whitespace                                   *
- *             length    - [OUT] the parameter length excluding trailing      *
+ *             length    - [OUT] the parameter length including trailing      *
  *                               whitespace                                   *
  *             sep_pos   - [OUT] the parameter separator character            *
  *                               (',' or ')') position.                       *
